add: contact form

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -16,7 +16,7 @@ label.discountStartDate=Дата начала скидки
 label.discountEndDate=Дата окончания скидки
 label.location=Расположение магазина
 label.mobile=Телефон
-label.email=Электронная почтка
+label.email=Электронная почта
 label.edit=Редактировать
 label.delete=Удалить
 label.changeLang=Изменить язык приложения
