add: locale page css

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
-label.chooseSessionLocale=Set Session Locale
+label.chooseSessionLocale=Set App Language
 label.lang.en=English
 label.lang.ru=Russian
-label.sessionChangeSuccess=Session locale is changed successfully
+label.sessionChangeSuccess=Language is changed successfully
 label.startApp=Go to App
 label.app=Shopping Center App
 label.newShop=Add New Shop
