--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,7 +1,7 @@
-label.chooseSessionLocale=Установить языковой стандарт сессии
+label.chooseSessionLocale=Установить язык приложения
 label.lang.en=Английский
 label.lang.ru=Русский
-label.sessionChangeSuccess=Языковой стандарт сессии успешно изменен
+label.sessionChangeSuccess=Язык успешно изменен
 label.startApp=Перейти в приложение
 label.app=Приложение "Торговый центр"
 label.newShop=Добавить новый магазин
