add: map, contact form style, locale

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,15 @@ label.email=Email
 label.edit=Edit
 label.delete=Delete
 label.changeLang=Change App Language
+label.mall=Shopping Mall
+label.shops=Shops
+label.contact=Contact Us
+label.map=Shopping Mall Map
+label.contactForm=Contact Form
+label.firstName=First Name
+label.lastName=Last Name
+label.message=Message
+label.send=Send
+label.back=Go Back to the Homepage
+label.exampleFirstName=John
+label.exampleLastName=Doe
