--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -20,3 +20,15 @@ label.email=Электронная почта
 label.edit=Редактировать
 label.delete=Удалить
 label.changeLang=Изменить язык приложения
+label.mall=Торговый центр
+label.shops=Магазины
+label.contact=Связаться с нами
+label.map=Карта торгового центра
+label.contactForm=Форма обратной связи
+label.firstName=Имя
+label.lastName=Фамилия
+label.message=Сообщение
+label.send=Отправить
+label.back=Вернуться на главную страницу
+label.exampleFirstName=Петр
+label.exampleLastName=Иванов
