add: display tables style

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ label.sessionChangeSuccess=Language is changed successfully
 label.startApp=Go to App
 label.app=Shopping Center App
 label.newShop=Add New Shop
-label.allShops=List of All Shops
+label.allShops=List of Shops
 label.searchShop=Search Shop
 label.searchDiscount=Search Discount
 label.searchActualDiscount=Shops With Actual Discounts
@@ -29,6 +29,9 @@ label.firstName=First Name
 label.lastName=Last Name
 label.message=Message
 label.send=Send
-label.back=Go Back to the Homepage
+label.back=Homepage
 label.exampleFirstName=John
 label.exampleLastName=Doe
+label.fullShopInfo=View full Shop Information
+label.dbAccess=Access database information
+label.info=Additional Information
