--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -5,7 +5,7 @@ label.sessionChangeSuccess=Язык успешно изменен
 label.startApp=Перейти в приложение
 label.app=Приложение "Торговый центр"
 label.newShop=Добавить новый магазин
-label.allShops=Список всех магазинов
+label.allShops=Список магазинов
 label.searchShop=Искать магазин
 label.searchDiscount=Искать скидки
 label.searchActualDiscount=Магазины с актуальными скидками
@@ -29,6 +29,9 @@ label.firstName=Имя
 label.lastName=Фамилия
 label.message=Сообщение
 label.send=Отправить
-label.back=Вернуться на главную страницу
+label.back=Главная страница
 label.exampleFirstName=Петр
 label.exampleLastName=Иванов
+label.fullShopInfo=Посмотреть полную информацию о магазине
+label.dbAccess=Доступ к информации из базы данных
+label.info=Дополнительная информация
