add: search page style

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ label.sessionChangeSuccess=Language is changed successfully
 label.startApp=Go to App
 label.app=Shopping Center App
 label.newShop=Add New Shop
-label.allShops=List of Shops
+label.allShops=Full Shop List
 label.searchShop=Search Shop
 label.searchDiscount=Search Discount
 label.searchActualDiscount=Shops With Actual Discounts
@@ -35,3 +35,7 @@ label.exampleLastName=Doe
 label.fullShopInfo=View full Shop Information
 label.dbAccess=Access database information
 label.info=Additional Information
+label.search=Shop search
+label.enter=Enter your request
+label.find=Find
+label.reset=Reset
