--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -5,7 +5,7 @@ label.sessionChangeSuccess=Язык успешно изменен
 label.startApp=Перейти в приложение
 label.app=Приложение "Торговый центр"
 label.newShop=Добавить новый магазин
-label.allShops=Список магазинов
+label.allShops=Список всех магазинов
 label.searchShop=Искать магазин
 label.searchDiscount=Искать скидки
 label.searchActualDiscount=Магазины с актуальными скидками
@@ -35,3 +35,7 @@ label.exampleLastName=Иванов
 label.fullShopInfo=Посмотреть полную информацию о магазине
 label.dbAccess=Доступ к информации из базы данных
 label.info=Дополнительная информация
+label.search=Поиск магазина
+label.enter=Введите свой запрос
+label.find=Найти
+label.reset=Сбросить
