refactor: search page style

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -39,3 +39,4 @@ label.search=Поиск магазина
 label.enter=Введите свой запрос
 label.find=Найти
 label.reset=Сбросить
+label.enterDiscount=Введите минимальную скидку
