--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,3 +39,4 @@ label.search=Shop search
 label.enter=Enter your request
 label.find=Find
 label.reset=Reset
+label.enterDiscount=Enter minimum discount
