add: shop info style

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,3 +40,4 @@ label.enter=Enter your request
 label.find=Find
 label.reset=Reset
 label.enterDiscount=Enter minimum discount
+label.goBack=Go Back
