--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -12,8 +12,8 @@ label.searchActualDiscount=Магазины с актуальными скидк
 label.shopName=Название магазина
 label.shopDescription=Описание магазина
 label.discount=Скидка
-label.discountStartDate=Дата начала скидки
-label.discountEndDate=Дата окончания скидки
+label.discountStartDate=Дата начала действия скидки
+label.discountEndDate=Дата окончания действия скидки
 label.location=Расположение магазина
 label.mobile=Телефон
 label.email=Электронная почта
@@ -40,3 +40,4 @@ label.enter=Введите свой запрос
 label.find=Найти
 label.reset=Сбросить
 label.enterDiscount=Введите минимальную скидку
+label.goBack=Назад
