--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,3 +41,6 @@ label.find=Find
 label.reset=Reset
 label.enterDiscount=Enter minimum discount
 label.goBack=Go Back
+label.shopForm=Shop Information Form
+label.submit=Submit
+label.infoShop=Enter Shop Information
