--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -41,3 +41,6 @@ label.find=Найти
 label.reset=Сбросить
 label.enterDiscount=Введите минимальную скидку
 label.goBack=Назад
+label.shopForm=Форма информации о магазине
+label.submit=Отправить
+label.infoShop=Введите информацию о магазине
