--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ label.lang.ru=Russian
 label.sessionChangeSuccess=Language is changed successfully
 label.startApp=Go to App
 label.app=Shopping Center App
+label.newDiscount=Add New Discount
+label.allDiscounts=Full Discount List
 label.newShop=Add New Shop
 label.allShops=Full Shop List
 label.searchShop=Search Shop
@@ -44,3 +46,7 @@ label.goBack=Go Back
 label.shopForm=Shop Information Form
 label.submit=Submit
 label.infoShop=Enter Shop Information
+label.discounts=Discounts
+label.fullDiscountInfo=View full Discount Information
+label.infoDiscount=Enter Discount Information
+label.shop=Shop
