--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -4,6 +4,8 @@ label.lang.ru=Русский
 label.sessionChangeSuccess=Язык успешно изменен
 label.startApp=Перейти в приложение
 label.app=Приложение "Торговый центр"
+label.newDiscount=Добавить новую скидку
+label.allDiscounts=Полный список скидок
 label.newShop=Добавить новый магазин
 label.allShops=Список всех магазинов
 label.searchShop=Искать магазин
@@ -44,3 +46,6 @@ label.goBack=Назад
 label.shopForm=Форма информации о магазине
 label.submit=Отправить
 label.infoShop=Введите информацию о магазине
+label.discounts=Скидки
+label.fullDiscountInfo=Посмотреть полную информацию о скидках
+label.shop=Магазин
