--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,3 +50,5 @@ label.discounts=Discounts
 label.fullDiscountInfo=View full Discount Information
 label.infoDiscount=Enter Discount Information
 label.shop=Shop
+label.discountStatistics=Discount Search Statistics
+label.count=Discount Search Count
