--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -49,3 +49,5 @@ label.infoShop=Введите информацию о магазине
 label.discounts=Скидки
 label.fullDiscountInfo=Посмотреть полную информацию о скидках
 label.shop=Магазин
+label.discountStatistics=Статистика поиска скидок
+label.count=Количество поисков скидки
