add: criteria join many to one

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,3 +52,4 @@ label.infoDiscount=Enter Discount Information
 label.shop=Shop
 label.discountStatistics=Discount Search Statistics
 label.count=Discount Search Count
+label.shopDiscounts=View All Shop discounts
