--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -51,3 +51,4 @@ label.fullDiscountInfo=Посмотреть полную информацию о
 label.shop=Магазин
 label.discountStatistics=Статистика поиска скидок
 label.count=Количество поисков скидки
+label.shopDiscounts=Посмотреть все скидки магазина
