add: dropdown menu

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,3 +53,6 @@ label.shop=Shop
 label.discountStatistics=Discount Search Statistics
 label.count=Discount Search Count
 label.shopDiscounts=View All Shop discounts
+label.menu=Menu
+label.searchDiscount(Discounts)=Search Discount (only Discounts)
+label.searchDiscount(Shop)=Search Discount (plus Shops)
