--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -52,3 +52,6 @@ label.shop=Магазин
 label.discountStatistics=Статистика поиска скидок
 label.count=Количество поисков скидки
 label.shopDiscounts=Посмотреть все скидки магазина
+label.menu=Меню
+label.searchDiscount(Discounts)=Поиск скидки (только скидки)
+label.searchDiscount(Shop)=Поиск скидки (включая магазины)
