add: login page style, shop id validation

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -8,7 +8,6 @@ label.newDiscount=Добавить новую скидку
 label.allDiscounts=Полный список скидок
 label.newShop=Добавить новый магазин
 label.allShops=Список всех магазинов
-label.searchShop=Искать магазин
 label.searchDiscount=Искать скидки
 label.searchActualDiscount=Магазины с актуальными скидками
 label.shopName=Название магазина
@@ -48,6 +47,7 @@ label.submit=Отправить
 label.infoShop=Введите информацию о магазине
 label.discounts=Скидки
 label.fullDiscountInfo=Посмотреть полную информацию о скидках
+label.infoDiscount=Введите информацию о скидке
 label.shop=Магазин
 label.discountStatistics=Статистика поиска скидок
 label.count=Количество поисков скидки
